# Chess

./: .gitignore  README.md
chessBoard/include/: BitBoard.hpp
chessBoard/src/: BitBoard.cpp
chessGUI/: .gitignore  CMakeLists.txt
chessGUI/include/: Constants.hpp  PieceRender.hpp  RenderWindow.hpp  errorMessage.hpp
chessGUI/src/: Constants.cpp  PieceRender.cpp  RenderWindow.cpp  errorMessage.cpp  main.cpp
